# LinuxNamespace

./: .gitignore  CMakeLists.txt  IPC_EXE  Linux_IPC_GUI.py  Makefile  POSIX_msgq_metrics.txt  README.md  SYSV_msgq_metrics.txt  bell_curve.py  core.py  create_graph.py  data.csv  demo_data.csv  erics_gui.py  fix_perms.sh  kill_ipcs.sh  luke_gui.py  makefile  msgq.csv  requirements.txt  run.script  run_alex.script  run_alex_namespace.script  run_alex_native_posix.script  run_all.script  run_all_namespace.script  run_declan.script  run_declan_namespace.script  run_eric.script  run_eric_namespace.script  run_eric_namespace_posix.script  run_eric_namespace_sysv.script  run_eric_native_posix.script  run_eric_native_sysv.script  run_mq_namespace_posix.script  run_mq_namespace_sysv.script  run_sem_namespace.script  run_sm.script  run_vincent.script  run_vincent_namespace.script  (+7 more)
LNDriver/: CMakeLists.txt
LNDriver/src/: main.c
LNLib/: CMakeLists.txt
LNLib/src/: debug_utils.h
LNLib/src/SYSV_semaphore/: SYSVsemaphore.c  SYSVsemaphore.h  SYSVsemaphore_driver.c  SYSVsemaphore_driver.h
LNLib/src/semaphore/: Psemaphore.c  Psemaphore.h  semaphore_driver.c
LNLib/src/semaphore/semaphore/: Psemaphore.c  Psemaphore.h  semaphore_driver.c  semaphore_driver.h
LNLib/src/shmem/: server.c  server.h
UserCode/: CMakeLists.txt  debug_utils.c  debug_utils.h
UserCode/Alex/: CMakeLists.txt
UserCode/Alex/src/POSIX_message_queue/: POSIX_message_queue.c  POSIX_message_queue.h  POSIX_message_queue_driver.c  POSIX_message_queue_driver.h  POSIX_msgq_metrics.c  POSIX_msgq_metrics.h  POSIX_msgq_metrics.txt
UserCode/Alex/src/sysv_messagequeue/: SYSV_message_queue.c  SYSV_message_queue.h  SYSV_message_queue_driver.c  SYSV_message_queue_driver.h  SYSV_msgq_metrics.c  SYSV_msgq_metrics.h
UserCode/Declan/: CMakeLists.txt
UserCode/Declan/src/: .DLib_Driver.c.swp  DLib_Driver.c  DLib_Driver.h
UserCode/Eric/: CMakeLists.txt
UserCode/Eric/src/SYSV_semaphore/: SYSVsemaphore.c  SYSVsemaphore.h  SYSVsemaphore_driver.c  SYSVsemaphore_driver.h
UserCode/Eric/src/semaphore/: Psemaphore.c  Psemaphore.h  semaphore_driver.c  semaphore_driver.h
UserCode/Vincent/: CMakeLists.txt  sprint_speed.csv
UserCode/Vincent/src/posix_shmem/: .posix_shmem_driver.c.swp  SHM_POSIX_Output.txt  posix_client.c  posix_client.h  posix_server.c  posix_server.h  posix_shmem_driver.c  posix_shmem_driver.h  test
UserCode/Vincent/src/posix_shmem/testing/: SHM_POSIX_Output.txt  main.c  test
UserCode/Vincent/src/sysv_shmem/: SHM_SYSV_Output.txt  client.c  client.h  server.c  server.h  shared_mem_driver.c  shared_mem_driver.h
scripts/: run_alex.script  run_alex_namespace.script  run_alex_native_sysv.script  run_all.script  run_declan.script  run_eric.script  run_eric_native_sysv.script  run_namespace.script  run_vincent.script  run_vincent_namespace.script  run_vincent_native_posix.script
src/: debug_utils.h  main.c
src/example/: example.c  example.h
src/messagequeue/: message_queue.c  message_queue_driver.c
src/semaphore/: Psemaphore.c  semaphore_driver.c  semaphore_driver.h
src/shmem/: client.c  client.h  execute.c  server.c  server.h  shared_mem_driver.c  shared_mem_driver.h  test2
src/shmem/testShm/: result  test  test2
src_sdafhkja/: main.c
src_sdafhkja/messagequeue/: message_queue.c  message_queue.h  message_queue_driver.h
src_sdafhkja/semaphore/: Psemaphore.c
src_sdafhkja/shmem/: client.c
src_sdafhkja/shmem/testShm/: output  test
